--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-shadow": "^1.2.2",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-view-overflow": "^0.0.5",
     "react-native-web": "~0.11.7",
     "react-navigation": "~4.0.10",
