--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-native-deck-swiper": "^1.6.7",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.5.6",
+    "react-native-maps": "^0.26.1",
+    "react-native-open-maps": "^0.3.5",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-shadow": "^1.2.2",
