--- a/package.json
+++ b/package.json
@@ -13,31 +13,34 @@
   },
   "dependencies": {
     "@expo/samples": "~36.0.0",
-    "@expo/vector-icons": "~10.0.0",
+    "@expo/vector-icons": "^10.0.0",
     "@mapbox/polyline": "^1.1.0",
     "@react-native-community/viewpager": "2.0.2",
     "@react-navigation/web": "~1.0.0-alpha.9",
-    "expo": "~36.0.0",
+    "expo": "^36.0.0",
     "expo-asset": "~8.0.0",
     "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
     "expo-permissions": "~8.0.0",
     "expo-web-browser": "~8.0.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "lottie-react-native": "~2.6.1",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-communications": "^2.2.1",
     "react-native-deck-swiper": "^1.6.7",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "^1.5.6",
-    "react-native-maps": "^0.26.1",
+    "react-native-gesture-handler": "~1.5.0",
+    "react-native-map-link": "^2.7.3",
+    "react-native-maps": "0.26.1",
+    "react-native-open-map": "^3.0.2",
     "react-native-open-maps": "^0.3.5",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-shadow": "^1.2.2",
     "react-native-vector-icons": "^6.6.0",
     "react-native-view-overflow": "^0.0.5",
-    "react-native-web": "~0.11.7",
+    "react-native-web": "^0.11.7",
     "react-navigation": "~4.0.10",
     "react-navigation-stack": "~1.10.3",
     "react-navigation-tabs": "~2.6.2",
@@ -45,8 +48,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "~8.0.0",
-    "jest-expo": "~36.0.1"
+    "babel-preset-expo": "^8.0.0",
+    "jest-expo": "^36.0.0"
   },
   "private": true
 }
