--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^10.0.0",
     "@mapbox/polyline": "^1.1.0",
     "@react-native-community/viewpager": "2.0.2",
+    "@react-navigation/material-bottom-tabs": "^5.0.5",
     "@react-navigation/web": "~1.0.0-alpha.9",
     "expo": "^36.0.0",
     "expo-asset": "~8.0.0",
@@ -35,6 +36,7 @@
     "react-native-maps": "0.26.1",
     "react-native-open-map": "^3.0.2",
     "react-native-open-maps": "^0.3.5",
+    "react-native-paper": "^3.6.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-shadow": "^1.2.2",
@@ -44,6 +46,7 @@
     "react-navigation": "~4.0.10",
     "react-navigation-stack": "~1.10.3",
     "react-navigation-tabs": "~2.6.2",
+    "react-navigation-transitions": "^1.0.12",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
